kubernetes/apps/custom-apps/apirouter/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.ok8.sh/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-router
spec:
  parentRefs:
    - name: external
      namespace: networking
      sectionName: https
  hostnames: ["api.ok8.sh"]
  rules:
    - matches:
        - path: { type: Exact, value: / }
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: api-hello-filter
